feat: implemented api to retrieve list of delegations by partner
