# connector-api/src/main/java/it/pagopa/selfcare/dashboard/connector/api/MsCoreConnector.java
@@ -35,5 +35,6 @@ public interface MsCoreConnector {
     DelegationId createDelegation(Delegation delegation);
 
     List<BrokerInfo> findInstitutionsByProductAndType(String productId, String type);
-    List<Delegation> getDelegations(String from, String productId);
+    List<Delegation> getDelegations(String from, String to, String productId);
+
 }
